# gpu_practice

./: CMakeLists.txt  README.md  main.cpp  tools_configure.yaml
framework/: register_case.h  test_case.h  test_map.h  validate.h
host_code/: CMakeLists.txt
host_code/l0_host/: CMakeLists.txt  l0_helper.h  l0_host_test.cpp  l0_max_vector.cpp  l0_max_vector_v1.cpp
host_code/l0_host/utility/: l0_helper.h
host_code/ocl_host/: CMakeLists.txt  ocl_helper.h  ocl_host_test.cpp
kernel/: CMakeLists.txt  empty.cl  empty.cpp  max_kernel.cpp  max_kernel_v1.cpp
tool/: checkTools.py  fulsim_util.py
